[HABRI][#409] Fixed issue with resource title overlapping resource rating in tag search

--- a/templates/habricentral/html/com_tags/tags.css
+++ b/templates/habricentral/html/com_tags/tags.css
@@ -45,3 +45,7 @@
 	.tag-description {
 		padding:1em;
 	}
+
+	.results .title {
+		padding-right: 200px;
+	}
